# langchain-book

./: .gitignore  00 basic.ipynb  01 langchain.ipynb  02 rag.ipynb  03 chat.ipynb  05 jupyter.ipynb  06 memory.ipynb  07 agent.ipynb  08 arch.ipynb  08 source-code.ipynb  10-autogpt.ipynb  README.md  basic.ipynb  jupyter.sh  pyproject.toml  rag.ipynb
Utils/: Client.py  Parser.py  Text.py  TextBlock.py  WebPage.py  __init__.py
data/autogpt-demo/: 求职简历.docx
docs/: LCEL.qmd  demo.ipynb
notes/: 00 basic.ipynb  03 chat.ipynb  04 document.ipynb  05 jupyter.ipynb  06 memory.ipynb  07 agent.ipynb  09-chatglm.ipynb  10-autogpt.ipynb  12-streaming.ipynb  13-function-calling.ipynb  14-tool.ipynb  16-zhipu.ipynb
notes/01 Basic/: 00 basic.ipynb  01 install.ipynb  02 Arch.ipynb  02 Tutorial.ipynb  05 Prompt.ipynb  06 Memory.ipynb  07 Streaming.ipynb  08 Concept.ipynb  09 FunctionCalling.ipynb  10 Chain.ipynb  chat_prompt_0_system.json  chat_prompt_1_human.json  chat_prompt_2_ai.json  chat_prompt_3_human.json  prompt_demo2.json
notes/01 Basic/FunctionCalling/: 13-function-calling.ipynb
notes/02 LLM/: 01 SrcLLM.ipynb  02 ZhipuAI.ipynb  03 Tonogyi.ipynb  04 FakeLLM.ipynb  17-tongyi.ipynb
notes/03 LCEL/: 01 BasicLCEL.ipynb  02 Interface.ipynb  03 ParaRun.ipynb  04 RunnableLambda.ipynb  05 Runnable.ipynb  06 Tech.ipynb  09 Branch.ipynb  10 SrcChain.ipynb  11 Config.ipynb  12 Schema.ipynb  13 serialize.ipynb
notes/04 RAG/: 01 RAG.ipynb  03 LangchainRAG.ipynb  04 Web.ipynb
notes/05 Agent/: 01 Agent.ipynb  02 SrcAgent.ipynb  03 AutoGPT.ipynb  03-AutoGPT.ipynb  04 Tool.ipynb  05 SQLAgent.ipynb  06 ReActAgent.ipynb  07 CreatSQL.ipynb  08 FunctionCalling.ipynb  09 zhipu.ipynb  10 CoT.ipynb  14-tool.ipynb
notes/06 LangGraph/: 01 LangGraph.ipynb  02 create_tool_agent.ipynb  03 self-discover.ipynb  11-langgraph.ipynb
notes/08 Wencheng/: 01 Remote.ipynb
notes/09 Advance/: 02 bei_an.ipynb
notes/10 LangServe/: client.ipynb  server.ipynb
notes/11 AGI-Share-2024-0314/: 00 index.ipynb
notes/11 AGI-Share-2024-0401/: 01 llm.ipynb  02 agent.ipynb  index.md  part_1.ipynb  part_2.ipynb
notes/11 AGI-Share-2024-0401/data/: 求职简历.md
notes/12 ChatGLM3/: 01 install.ipynb
notes/13 HM-Share-2024-0415/: 01 agent_tutorial.ipynb  01 tutorial.ipynb  02 rag_tutorial.ipynb  03 langgraph.ipynb
notes/data/: demo.csv  demo.sqlite
