[tool.poetry]
name = "langchain-book"
version = "0.1.0"
description = ""
authors = ["arcstep <43801@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
docarray = "^0.32.0"
langchain-community = "^0.0.16"
langchain-core = "^0.1.16"
langchain-experimental = "^0.0.49"
langchain-openai = "^0.0.5"
httpx-sse = "^0.4.0"
fastapi = "^0.109.0"
langserve = "^0.0.41"
chromadb = "^0.4.22"
lancedb = "^0.5.1"
pandas = "^2.2.0"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
lxml = "^5.1.0"
html5lib = "^1.1"
nest-asyncio = "^1.6.0"
defusedxml = "^0.7.1"
duckdb = {path = "duckdb-0.9.2-cp310-cp310-macosx_10_9_universal2.whl"}
sentence-transformers = "^2.3.1"
langfuse = "^2.7.3"
dashscope = "^1.14.1"
emoji = "^2.10.1"
grandalf = "^0.8"
langchain-cli = "^0.0.21"
duckdb-engine = "^0.11.1"
langchainhub = "^0.1.14"
zhipuai = "^2.0.1"
unstructured = "^0.12.4"
docx = "^0.2.4"
pypdf = "^4.0.1"
docx2txt = "^0.8"
openpyxl = "^3.1.2"
langgraph = "^0.0.24"
playwright = "^1.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
