[tool.poetry]
name = "langchain-book"
version = "0.1.0"
description = ""
authors = ["arcstep <43801@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ipykernel = "^6.29.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.10"
langchain-community = "^0.0.25"
xeus-python = "^0.15.12"
langgraph = "^0.0.26"
langchain-chinese = "^0.2.25"
langchain-zhipu = "^4.0.18"
langchain-dashscope = "^0.1.4"

[tool.poetry.group.dev.dependencies]
langchain-zhipu = "^4.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
